<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_mode"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupViewMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_mode" />

        <RadioButton
            android:id="@+id/radioButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_mode" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

